crates/aranya-policy-compiler/tests/data/match_stmt/default_not_last_unknown.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: unknown error
   |
15 |         _ => {
   |         ^ Default match case must be last.
